[package]
name = "pinentry-egui"
version = "0.1.1"
edition = "2021"
authors = ["dsociative"]
description = "Native Wayland pinentry for GPG using egui"
repository = "https://github.com/dsociative/pinentry-egui"
license = "MIT OR Apache-2.0"
keywords = ["pinentry", "gpg", "wayland", "egui", "security"]
categories = ["cryptography", "gui"]
readme = "README.md"
exclude = ["CLAUDE.md"]

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "accesskit", "wayland", "x11"] }
secrecy = "0.10"

[dev-dependencies]
egui_kittest = "0.33"
accesskit = "0.21"

[profile.release]
strip = true
lto = true
